--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -9,7 +9,7 @@ jobs:
         steps:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - name: Checkout
-            - uses: actions/checkout@v1
+              uses: actions/checkout@v1
 
             - name: Install Node
               uses: actions/setup-node@v1
