--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -7,35 +7,29 @@ jobs:
     test-api:
         runs-on: ubuntu-latest
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - name: Checkout
               uses: actions/checkout@v1
-
             - name: Install Node
               uses: actions/setup-node@v1
               with:
-                  node-version: "12.x"
-
+                  node-version: "14.x"
             - name: Install newman
               run: |
                   npm install -g newman
                   npm install -g newman-reporter-htmlextra
-
             - name: Run POSTMAN collection
+              continue-on-error: true
               run: |
-                  npx newman run petstore.collection.json -r htmlextra --reporter-htmlextra-export ./docs/index.html
-
+                  npm run newman run petstore.postman_collection.json -r htmlextra --reporter-htmlextra-export ./newman/index.html
             - name: Deploy report page
               uses: peaceiris/actions-gh-pages@v3
               with:
-                github_token: ${{ secrets.GITHUB_TOKEN }}
-                publish_dir: ./docs
-                user_name: 'github-actions[bot]'
-                user_email: 'github-actions[bot]@users.noreply.github.com'
-
-            # Upload the contents of Test Results directory to workspace
+              github_token: ${{ secrets.GITHUB_TOKEN }}
+              publish_dir: ./newman
+              user_name: "github-actions[bot]"
+              user_email: "github-actions[bot]@users.noreply.github.com"
             - name: Output the run Details
               uses: actions/upload-artifact@v2
               with:
                   name: Newman
-                  path: docs
+                  path: newman
